--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "mongoose": "^5.9.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "simple-parallax-js": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
