--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js -e hbs,css,js",
+    "start": "nodemon app.js -e hbs,css,js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
